# rustdesk_hdr

./: .gitignore  CMakeLists.txt  README.md  cm_log_watcher.cpp  cm_log_watcher.h  debug.cpp  debug.h  hdr_control.cpp  hdr_control.h  install_mode.cpp  install_mode.h  main.cpp  resources.rc  service_mode.cpp  service_mode.h  session_bridge.cpp  session_bridge.h
.github/workflows/: build.yml
